# lgba

./: .gitignore  .gitmodules  Cargo.toml  Justfile  LICENSE-MIT  README.md  lgba.ld  rustfmt.toml
.cargo/: config
build_codegen/: Cargo.toml  README.md  run.sh
build_codegen/.cargo/: config
build_codegen/src/: download_fonts.rs  font_data.rs  gen_fonts.rs  main.rs
build_codegen/src/font_data/: mod.rs
codegen/: Cargo.toml
codegen/src/: main.rs
examples/lgba_test_rom/: Cargo.toml  DataTest.toml  RomData.toml
examples/lgba_test_rom/src/: game_data_test.rs  interrupt_test.rs  main.rs  savegame_test.rs  terminal_test.rs
examples/lgba_test_rom/test_files/: a_10_10.txt  a_1_1.txt  a_1_2.txt  b_15_15.txt  b_1_2.txt
lgba/: Cargo.toml  README.md  build.rs
lgba/asm/: crt0.s  header.s  save.s  sys.s
lgba/asm/aeabi-cortexm0/: idivmod.S  lasr.S  ldivmod.S  llsl.S  llsr.S  lmul.S  macros.inc  memset.S
lgba/asm/agbabi/: lmul.s
lgba/examples/: panic_test.rs  terminal_test.rs  test_rom.rs  test_savegame.rs
lgba/examples/test_rom/: main.rs  savegame_test.rs  terminal_test.rs
lgba/src/: allocator.rs  crt0.s  debug.rs  dma.rs  entry.rs  entry.s  gba_header.rs  irq.rs  lib.rs  panic_handler.rs  panicking.rs  sys.rs  sys.s  timer.rs
lgba/src/asm/: build_asm.rs  gba_header.rs  mod.rs
lgba/src/asm/aeabi/: idiv.S  idivmod.S  ldivmod.S  llsl.S  lmul.S  memmove.S
lgba/src/asm/impl/: crt0.s  gba_header.s  header.s  save.s  sys.s
lgba/src/debug/: log.rs  mod.rs
lgba/src/display/: layers.rs  macros.rs  mod.rs  modes.rs  vram.rs
lgba/src/display/terminal/: font_data.rs  fonts.rs  gen_font_ascii.rs  gen_font_basic.rs  gen_font_full.rs  mod.rs
lgba/src/display/terminal/font_ascii/: font.chr  mod.rs
lgba/src/display/terminal/font_ascii_half/: font.chr  mod.rs
lgba/src/display/terminal/font_basic/: font.chr  mod.rs
lgba/src/display/terminal/font_full/: font.chr  mod.rs
lgba/src/mmio/: display.rs  emulator.rs  lcd.rs  mod.rs  reg.rs  sys.rs
lgba/src/save/: asm_utils.rs  eeprom.rs  flash.rs  mod.rs  sram.rs  utils.rs
lgba/src/sync/: locks.rs  mod.rs  statics.rs
lgba/src/sys/: allocator.rs  bios.rs  lcd.rs  mod.rs  reg.rs
lgba/src/terminal/: font_data.rs  mod.rs
lgba/src_asm/aeabi/: idiv.S  lasr.S  ldivmod.S
lgba_common/: Cargo.toml
lgba_common/examples/: DataTest.toml  data_test.rs
lgba_common/examples/test_files/: a_10_10.txt  a_1_1.txt  a_1_2.txt  b_15_15.txt
lgba_common/src/: base_encoder.rs  base_repr.rs  common.rs  encoder.rs  hashes.rs  lib.rs  phf.rs
lgba_common/src/data/: encoder.rs  filesystem_repr.rs  loader.rs  manifest.rs  manifest_repr.rs  mod.rs  rom_data.rs
lgba_data/: Cargo.toml  LICENSE-MIT
lgba_data/src/: lib.rs  raw.rs
lgba_macros/: Cargo.toml  regenerate_unscii.sh
lgba_macros/examples/: translate_misaki_bdf.rs
lgba_macros/src/: attrs.rs  hashes.rs  lgba_attrs.rs  lgba_data_attrs.rs  lib.rs
lgba_macros/src/build_fonts/: gen_fonts.rs  mod.rs
lgba_macros/src/build_fonts/font_data/: misaki_gothic_2nd.hex  mod.rs
lgba_phf/: Cargo.toml  LICENSE-MIT  README.md
lgba_phf/benches/: build.rs
lgba_phf/examples/: test_impl.rs
lgba_phf/src/: bitvector.rs  generator.rs  hashmap.rs  lib.rs  par_iter.rs  params.rs  phf_generator.rs  phf_shared.rs
lgba_phf/tests/: integration.rs
lgba_romtool/: Cargo.toml
lgba_romtool/src/: build_bin.rs  build_rom.rs  compile.rs  lgba.ld  lgba_config.ld.inc  lgba_main.ld.inc  lib.rs  main.rs
maintenance_scripts/: Cargo.toml
maintenance_scripts/src/: main.rs
maintenance_scripts/src/build_fonts/: gen_fonts.rs  mod.rs
maintenance_scripts/src/build_fonts/font_data/: mod.rs
