[workspace]
members = [
    "lgba",
    "lgba_common",
    "lgba_data",
    "lgba_macros",
    "lgba_phf",
    "lgba_romtool",

    "maintenance_scripts",

    "examples/lgba_test_rom",
]
resolver = "2"

[profile.dev]
opt-level = 1
debug = 2
lto = false

[profile.release]
opt-level = 3
debug = 2
lto = true
