[package]
name = "lgba_scripts_codegen"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
bdf = "0.6"
kanji = "2"
reqwest = { version = "0.11", features = ["blocking"] }
unic-ucd = "0.9"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

lgba_phf = { version = "*", path = "../lgba_phf", features = ["generator"] }
