[package]
name = "lgba"
version = "0.1.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "A low-level library for creating GBA homebrew and romhacks."

documentation = "https://docs.rs/lgba/"
repository = "https://github.com/Lymia/lgba"
readme = "../README.md"

license = "MIT/Apache-2.0"

[dependencies]
enumset = "1"
num_enum = { version = "0.6", default-features = false }

lgba_macros = { version = "0.1", path = "../lgba_macros" }
lgba_phf = { version = "0.1", path = "../lgba_phf" }
