[package]
name = "lgba"
version = "0.1.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "A low-level library for creating GBA homebrew and romhacks."

documentation = "https://docs.rs/lgba/"
repository = "https://github.com/Lymia/lgba"
readme = "../README.md"

license = "MIT/Apache-2.0"

[features]
default = ["allocator"]
# Enables the allocator
allocator = ["linked_list_allocator"]
# Enables low-level features
low_level = []
# Disables debugging functionality entirely
disable_debug = ["log/max_level_off", "log/release_max_level_off"]

[dependencies]
enumset = "1"
num_enum = { version = "0.6", default-features = false }
linked_list_allocator = { version = "0.10", optional = true, features = ["alloc_ref"], default-features = false }
log = { version = "0.4", optional = true, default-features = false }

lgba_common = { version = "0.1", path = "../lgba_common" }
lgba_macros = { version = "0.1", path = "../lgba_macros" }
lgba_phf = { version = "0.1", path = "../lgba_phf" }

[dependencies.compiler_builtins_local]
# Link a version of compiler_builtins from crates.io
# This allows us to enable weak linkage, and thus use optimized ASM versions of instrinics we have those for.
# Otherwise, we fall back on a Rust version (for stuff like softfloat)
#
# We can't use the stdlib version because it doesn't have weak-instrinsics.
package = "compiler_builtins"
version = "0.1.93"
features = ["weak-intrinsics", "no-asm"]
default-features = false
