[package]
name = "lgba_common"
version = "0.1.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "Not public API!"
license = "MIT/Apache-2.0"

[features]
data = ["phf", "fnv", "num_enum"]
data_manifest = [
    "generator_base", "data", "hashes",
    "anyhow", "serde", "toml"
]
data_build = [
    "data_manifest", "generator_build", "generator_phf",
    "regex-lite", "glob", "ssmarshal"
]

hashes = ["blake3"]

generator_base = ["log"]
generator_build = ["generator_base", "serde", "hashes"]
generator_phf = ["generator_build", "phf", "lgba_phf/generator", "serde"]
phf = ["lgba_phf"]

[dependencies]
anyhow = { version = "1.0", optional = true }
blake3 = { version = "1.4", optional = true }
fnv = { version = "1.0", default-features = false, optional = true }
glob = { version = "0.3", optional = true }
log = { version = "0.4", default-features = false, optional = true }
num_enum = { version = "0.7", optional = true, default-features = false }
regex-lite = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
ssmarshal = { version = "1.0", optional = true }
toml = { version = "0.8", optional = true }

lgba_phf = { version = "0.1", path = "../lgba_phf", optional = true }

[dev-dependencies]
