[package]
name = "lgba_data"
version = "0.1.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "A library for lgba allowing ."

documentation = "https://docs.rs/lgba/"
repository = "https://github.com/Lymia/lgba"
readme = "../README.md"

license = "MIT/Apache-2.0"

[dependencies]
lgba_common = { version = "0.1", path = "../lgba_common", features = ["data"] }
lgba_macros = { version = "0.1", path = "../lgba_macros" }

[dev-dependencies]
