[package]
name = "lgba_macros"
version = "0.1.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "Not public API!"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
darling = { version = "0.20", default-features = false }
fnv = { version = "1.0", default-features = false }
syn = "2"
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "1.3"

# Used for font generation
kanji = "2"
unic-ucd-block = "0.9"
unic-ucd-bidi = "0.9"
unic-ucd-common = "0.9"
unic-ucd-normal = "0.9"

# Other crates in project
lgba_phf = { version = "0.1.0", path = "../lgba_phf", features = ["generator", "generator_proc_macro"] }

[dev-dependencies]
anyhow = "1"
bdf = "0.6"
