[package]
name = "lgba_macros"
version = "0.1.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "Not public API!"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[features]
lgba = ["darling"]
data = ["lgba_common", "lgba_common/data_manifest"]

[dependencies]
darling = { version = "0.20", optional = true, default-features = false }
fnv = { version = "1.0", default-features = false }
syn = "2"
quote = "1"
proc-macro2 = "1"

lgba_common = { version = "0.1", optional = true, path = "../lgba_common" }
