[package]
name = "lgba_phf"
version = "0.1.0"
authors = ["Alissa Rao <lymia@lymiahugs.com>"]
edition = "2021"

description = "A PHF library optimized specifically for the GBA."

documentation = "https://docs.rs/lgba/"
repository = "https://github.com/Lymia/lgba"
readme = "../README.md"

license = "MIT"

[features]
generator = []

[dependencies]
twox-hash = { version = "1.6.3", default-features = false }

[dev-dependencies]
