[package]
name = "lgba_phf"
version = "0.1.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "A PHF library optimized specifically for the GBA."

documentation = "https://docs.rs/lgba/"
repository = "https://github.com/Lymia/lgba"
readme = "../README.md"

license = "MIT"

[features]
generator = []
generator_proc_macro = ["generator", "quote", "proc-macro2"]

[dependencies]
twox-hash = { version = "1.6", default-features = false }

# Syn dependencies
quote = { version = "1", optional = true }
proc-macro2 = { version = "1", optional = true }

[dev-dependencies]
