[package]
name = "lgba_romtool"
version = "0.1.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "The tool used by lgba to work with the produced ROM files."

documentation = "https://docs.rs/lgba/"
repository = "https://github.com/Lymia/lgba"
readme = "../README.md"

license = "MIT/Apache-2.0"

[features]
default = ["binary"]
binary = ["clap", "tracing-subscriber"]

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
derive_setters = "0.1"
dirs = "5.0"
goblin = "0.6"
tracing = "0.1"

# Only used for the binary
clap = { version = "4.3", optional = true, features = ["derive", "color"] }
tracing-subscriber = { version = "0.3", optional = true }