[package]
name = "lgba_romtool"
version = "0.1.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "The tool used by lgba to work with the produced ROM files."

documentation = "https://docs.rs/lgba/"
repository = "https://github.com/Lymia/lgba"
readme = "../README.md"

license = "MIT/Apache-2.0"

[features]
default = ["binary"]
binary = ["clap", "env_logger"]

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
derive_setters = "0.1"
dirs = "5.0"
goblin = { version = "0.7", default-features = false, features = ["std", "elf32", "elf64", "endian_fd"] }
log = "0.4"

# Only used for the binary
clap = { version = "4.3", optional = true, default-features = false, features = ["std", "derive"] }
env_logger = { version = "0.10", optional = true }
