[package]
name = "maintenance_scripts"
version = "0.1.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

[features]

[dependencies]
bdf = "0.6"
kanji = "2"
syn = "2"
quote = "1"
proc-macro2 = "1"
unic-ucd-block = "0.9"
unic-ucd-bidi = "0.9"
unic-ucd-common = "0.9"
unic-ucd-normal = "0.9"

# Other crates in project
lgba_phf = { version = "0.1", path = "../lgba_phf", features = ["generator", "generator_proc_macro"] }
